[package]
name = "dolfin-lsp-core"
version = "0.1.4"
edition = "2024"
description = "Transport-agnostic LSP logic for the Dolfin language (native + WASM)"

[dependencies]
rowl             = { version = "0.1.4", features = [] }
dolfin-analysis  = "0.1.4"
dolfin-diagnostic = { version = "0.1.3", features = ["lsp"] }
dolfin-lint      = "0.1.4"
lsp-types        = "0.95"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
ropey            = "1"
thiserror = "2.0.18"
tracing = "0.1"

[features]
fs = ["rowl/fs"]

[dev-dependencies]
tempfile = "3"
