[package]
name = "dolfin-lsp-core"
version = "0.1.4"
edition = "2024"
license = "MIT"
keywords = [ "semantic-web", "ontology", "dolfin", "language", "lsp" ]
categories = [ "compilers", "parsing" ]
description = "Transport-agnostic LSP logic for the Dolfin language (native + WASM)"
homepage = "https://www.dolfin.fr"
repository = "https://github.com/dolfin-team/dolfin-lsp-core"

[dependencies]
rowl             = { version = "0.1.4", features = [] }
dolfin-analysis  = "0.1.4"
dolfin-diagnostic = { version = "0.1.3", features = ["lsp"] }
dolfin-lint      = "0.1.4"
lsp-types        = "0.95"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
ropey            = "1"
thiserror = "2.0.18"
tracing = "0.1"

[features]
fs = ["rowl/fs"]

[dev-dependencies]
tempfile = "3"
